MC-16046: Leverage the font-display CSS feature to ensure text is user-visible while webfonts are loading
- Remove font display swap from icons;

--- a/app/design/frontend/Magento/blank/web/css/source/_icons.less
+++ b/app/design/frontend/Magento/blank/web/css/source/_icons.less
@@ -8,7 +8,6 @@
         @family-name: @icons__font-name,
         @font-path: @icons__font-path,
         @font-weight: normal,
-        @font-style: normal,
-        @font-display: swap
+        @font-style: normal
     );
 }
